--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<app-header></app-header>
+<app-header class="fix"></app-header>
 <app-sidebar></app-sidebar>
 <app-footer></app-footer>
-<div style="margin-left:22%">  
+<div style="margin-left:18%">  
 <router-outlet></router-outlet>
 </div>
