--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -3,4 +3,5 @@
     <a routerLink="/lists" class="w3-bar-item w3-button">Lists</a>
     <a routerLink="/task-details" class="w3-bar-item w3-button">Task Details</a>
     <a routerLink="/todos-list" class="w3-bar-item w3-button">Todos List</a>
+    <a routerLink="/task-list" class="w3-bar-item w3-button">Task List</a>
   </div>
