--- a/src/app/todoslist/todoslist.component.html
+++ b/src/app/todoslist/todoslist.component.html
@@ -14,9 +14,7 @@
       </td>
     </tr>
 </table>
-<!-- <app-dialog [(visible)]="showDialog">
-  <h1>Hello World</h1>
-  <button (click)="showDialog = !showDialog" class="btn">Close</button>
-</app-dialog> -->
 
-<app-task-details></app-task-details>
+<!-- <button class="btn btn-lg btn-outline-primary" (click)="open()">Launch modal with animation</button> -->
+
+<!-- <app-task-details></app-task-details> -->
