--- a/src/app/task-details/task-details.component.html
+++ b/src/app/task-details/task-details.component.html
@@ -1,18 +1,18 @@
-<p>task-details works!</p>
+
 <!-- 
 <div *ngIf = "list">
             <input [(ngModel)] = "list.task">
 </div>
  -->
 
-<form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
+<!-- <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
   <label>
     Name:
-    <input type="text" formControlName="name">
+    <input type="text" name="hii" formControlName="name">
   </label>
 
   <label>
-    Discription:
+    Description:
     <input type="text" formControlName="description">
   </label>
 
@@ -26,4 +26,61 @@
     <input type="text" formControlName="priority">
   </label>
 <input type= "submit" value="Submit">
-</form>
+</form> -->
+
+
+<!-- ------------------------- -->
+<div class="container-fluid ">
+  <div class="row">
+    <div class="col-md-4 ">
+      <h3>Add User</h3>
+      <div class="bck">
+        <form [formGroup]="profileForm" (ngSubmit)="onSubmit()">
+          <div class="form-group">
+            <label for="email">Name:</label>
+            <input  type="email" class="form-control" formControlName="name">
+          </div>
+          <div class="form-group">
+            <label for="email">Description:</label>
+            <input type="email" class="form-control" formControlName="description">
+          </div>
+          <div class="form-group">
+            <label for="email">Due Date:</label>
+            <input type="email" class="form-control" formControlName="dueDate">
+          </div>
+          <div class="form-group">
+            <label for="email">Priority:</label>
+            <input type="email" class="form-control" formControlName="priority">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+        </div>
+    </div>
+    
+    <div class="col-md-8 top_margin" >
+        <div class="search-hero">
+            <input class="form-control" type="text" name="search" [(ngModel)]="searchText" autocomplete="off" placeholder="Start searching for name and description">
+          </div>
+          <br>
+      <table class="table table-striped table-dark.">
+        <tr class="thead-dark">
+          <th>Name<button id="sortBtn" (click)= "onSort(pageUsers.name)">sort</button></th>
+          <th>Description</th>
+          <th>Due Date</th>
+          <th>Priority</th>
+          <!-- <th>Id</th> -->
+          <th>Action</th>
+        </tr>
+        <tr *ngFor="let u of pageUsers | filter:searchText">
+          <td>{{u.name}}</td>
+          <td>{{u.description}}</td>
+          <td>{{u.dueDate | date: 'dd-MM-yyyy'}}</td>
+          <td>{{u.priority}}</td>
+          <!-- <td>{{u._id}}</td> -->
+          <td>
+        <button class="btn btn-sm btn-danger" (click)= "deleteRow(u._id)">Delete</button>
+        <button class="btn btn-sm" routerLink="/update-task" (click)="listSrvs.updateData(u)">Update</button>
+      </table>
+    </div>
+  </div>
+</div>
