--- a/src/app/task-list/task-list.component.html
+++ b/src/app/task-list/task-list.component.html
@@ -18,8 +18,7 @@
     <td>
   <button class="btn btn-sm btn-danger" (click)= "deleteRow(u._id)">Delete</button>
   <button class="btn btn-sm">Update</button>
+  <button class="btn btn-sm" (click)="addToCart(u)" routerLink="/cart">Add To cart</button>
     </td>
-  
-
   </tr>
 </table>
