--- a/src/app/update-task/update-task.component.html
+++ b/src/app/update-task/update-task.component.html
@@ -14,7 +14,7 @@
           <div class="form-group">
             <label for="email">Priority:</label>
             <input type="email" class="form-control" formControlName="priority">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
+          </div> 
+          <button type="submit" (click)= "clearVal()" class="btn btn-default">Submit</button>
         </form>
         
