--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,8 @@
 <div class="w3-sidebar w3-light-grey w3-bar-block" style="width:18%">
     <h3 class="w3-bar-item">Menu</h3>
-    <a routerLink="/lists" class="w3-bar-item w3-button">Lists</a>
+    <!-- <a routerLink="/lists" class="w3-bar-item w3-button">Lists</a> -->
     <a routerLink="/task-details" class="w3-bar-item w3-button">Task Details</a>
-    <a routerLink="/todos-list" class="w3-bar-item w3-button">Todos List</a>
-    <a routerLink="/task-list" class="w3-bar-item w3-button">Task List</a>
+    <!-- <a routerLink="/todos-list" class="w3-bar-item w3-button">Todos List</a>-->
+    <a routerLink="/task-list" class="w3-bar-item w3-button">Task List</a> 
+   <a routerLink="/cart" class="w3-bar-item w3-button">Cart</a>
   </div>
