--- a/src/app/task-details/task-details.component.html
+++ b/src/app/task-details/task-details.component.html
@@ -57,30 +57,36 @@
         </div>
     </div>
     
-    <div class="col-md-8 top_margin" >
-        <div class="search-hero">
-            <input class="form-control" type="text" name="search" [(ngModel)]="searchText" autocomplete="off" placeholder="Start searching for name and description">
-          </div>
+    <div class="col-md-8 top_margin">
+              <div class="search-hero">
+                  <input class="form-control" type="text" name="search" [(ngModel)]="searchText" autocomplete="off" placeholder="Search for name and description">
+                </div>
+            
+       
           <br>
-      <table class="table table-striped table-dark.">
-        <tr class="thead-dark">
-          <th>Name<button id="sortBtn" (click)= "onSort(pageUsers.name)">sort</button></th>
-          <th>Description</th>
-          <th>Due Date</th>
-          <th>Priority</th>
-          <!-- <th>Id</th> -->
-          <th>Action</th>
-        </tr>
-        <tr *ngFor="let u of pageUsers | filter:searchText">
-          <td>{{u.name}}</td>
-          <td>{{u.description}}</td>
-          <td>{{u.dueDate | date: 'dd-MM-yyyy'}}</td>
-          <td>{{u.priority}}</td>
-          <!-- <td>{{u._id}}</td> -->
-          <td>
-        <button class="btn btn-sm btn-danger" (click)= "deleteRow(u._id)">Delete</button>
-        <button class="btn btn-sm" routerLink="/update-task" (click)="listSrvs.updateData(u)">Update</button>
-      </table>
+          <div  style="height:350px; overflow:auto;">
+              <table class="table table-striped table-dark ">
+                  <tr class="thead-dark">
+                    <th>Name<button id="sortBtn" (click)= "onSort(pageUsers.name)">sort</button></th>
+                    <th>Description</th>
+                    <th>Due Date</th>
+                    <th>Priority</th>
+                    <th>Action</th>
+                  </tr>
+                  
+                  <tr *ngFor="let u of pageUsers | filter:searchText" >
+                    <td>{{u.name}}</td>
+                    <td>{{u.description}}</td>
+                    <td>{{u.dueDate | date: 'dd-MM-yyyy'}}</td>
+                    <td>{{u.priority}}</td>
+                    <td>
+                  <button class="btn btn-sm btn-danger" (click)= "deleteRow(u._id)">Delete</button>
+                  <button class="btn btn-sm" routerLink="/update-task" (click)="listSrvs.updateData(u)">Update</button>
+                  </td>
+                  </tr>
+                </table>
+          </div>
+      
     </div>
   </div>
 </div>
